# pyDARTdiags

./: .buildinfo  .git-blame-ignore-revs  .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/api/: example_data.doctree  index.doctree  matplots.doctree  obs_sequence.doctree  plots.doctree  stats.doctree
.doctrees/devel/: CONTRIBUTING.doctree  index.doctree
.doctrees/examples/: index.doctree  plot_duplicates.doctree  plot_grand_stats.doctree  plot_qc_hover.doctree  plot_qc_poss_vs_used.doctree  plot_rank_histogram.doctree  plot_remove_obs.doctree  sg_execution_times.doctree
.doctrees/userguide/: dartworkflow.doctree  index.doctree  installguide.doctree  quickstart.doctree  statistics.doctree  working-with-obsq.doctree
.github/workflows/: black.yml  code-cov.yml  documentation.yml  draft-pdf.yml
_downloads/01aedcf5fb250e5136aa0af1605c2ce4/: plot_rank_histogram.py
_downloads/0511548ffd2cac369830574f9a0739c7/: plot_remove_obs.ipynb
_downloads/1a52f3978f5128f0ca7927e38b19e65a/: plot_qc_poss_vs_used.ipynb
_downloads/21f8c607b07bcc3631d8187786709535/: plot_qc_poss_vs_used.py
_downloads/25e8be5ac3e7fb5340f4187d73e81dd4/: plot_duplicates.ipynb
_sources/: sg_execution_times.rst.txt
api/: example_data.html  index.html  matplots.html  obs_sequence.html  plots.html  stats.html
data/: NCEP+ACARS.201303_6H.obs_seq2013030306_10000  obs_seq.final.1000  obs_seq.final.ascii.medium  obs_seq.final.ascii.small  obs_seq.final.lorenz_96  obs_seq.out.tracer
devel/: CONTRIBUTING.html  index.html
docs/: Makefile  conf.py  index.rst  obs_sequence.rst  quickstart.rst  requirements.txt  youtube.py
docs/api/: example_data.rst  (+3 more)
examples/: GALLERY_HEADER.rst  README.rst  index.html  plot_duplicates.html  plot_grand_stats.html  plot_grand_stats.py  plot_qc_hover.html  plot_qc_hover.py  plot_qc_poss_vs_used.html  plot_qc_poss_vs_used.py  plot_rank_histogram.html  plot_remove_obs.html  sg_execution_times.html
notebooks/: plot_diags_play.ipynb
paper/: codemeta.json  paper.bib  paper.md
tests/: test_interactive_plots.py  test_obs_sequence.py  test_plots.py  test_stats.py
userguide/: dartworkflow.html  index.html  installguide.html  quickstart.html  statistics.html  working-with-obsq.html
(+152 files in other folders)
