[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydartdiags"
version = "0.0.4"
authors = [
  { name="Helen Kershaw", email="hkershaw@ucar.edu" },
]
description = "Observation Sequence Diagnostics for DART"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26",
    "plotly>=5.22.0"
]

[project.urls]
Homepage = "https://github.com/NCAR/pyDARTdiags.git"
Issues = "https://github.com/NCAR/pyDARTdiags/issues"
Documentation = "https://ncar.github.io/pyDARTdiags"

[tool.hatch.build.targets.wheel]
packages = ["src/pydartdiags"]
