[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydartdiags"
version = "0.6.1"
authors = [
  { name="Helen Kershaw", email="hkershaw@ucar.edu" },
]
description = "Observation Sequence Diagnostics for DART"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26",
    "plotly>=5.22.0",
    "pyyaml>=6.0.2",
    "matplotlib>=3.9.4"
]

[project.urls]
Homepage = "https://github.com/NCAR/pyDARTdiags.git"
Issues = "https://github.com/NCAR/pyDARTdiags/issues"
Documentation = "https://ncar.github.io/pyDARTdiags"

